# ImageFinalCompress

./: Android图片终极压缩.md  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/sunnyday/imagefinalcompress/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  libjpegbither.cpp  libjpegbither.h
app/src/main/java/com/sunnyday/imagefinalcompress/: MainActivity.kt
app/src/main/java/com/sunnyday/imagefinalcompress/utils/: NativeUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/sunnyday/constraintlayout/imagefinalcompress/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
